--- a/front_end/HTML_URL_Shortener.html
+++ b/front_end/HTML_URL_Shortener.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <!-- Front end UI for URL-shortener -->
-<html lang="en">
+<html>
 
 <head>
   <title>URL Shortener</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- CSS -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS_URL_Shortener.css">
-  <script type="text/javascript" src="JS_URL_Shortener.js"></script>
-  <script src="jquery-3.2.1.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+  <script type="text/javascript" src="JS_URL_Shortener.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="jquery-3.2.1.min.js"></script>
+  <script src="jquery.js"></script>
 </head>
 
 <body>
@@ -24,7 +27,7 @@
         <div class="input-group input-group-lg col-xs-9" id="indata">
           <!-- form container -->
           <input type="text" placeholder="http://....." class="form-control center">
-          <button id="ShortCopy" class="btn btn-default col-xs-2">Shorten</button>
+          <button id="ShortCopy" class="col-xs-2">Shorten</button>
         </div>
       </form>
     </div>
@@ -37,32 +40,12 @@
             <th id="orgurl">Original URL</th>
             <th id="srturl">Shortened URL</th>
           </tr>
-          <tr>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-          </tr>
         </thead>
         <tbody>
 
         </tbody>
       </table>
     </div>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $("button").click(function show() {
-          $("#table").css("display": "hidden");
-        });
-
-        $("h1").click(function() {
-          $(this).css("color", "white");
-        });
-      });
-    </script>
-    <!-- End of JQuery code -->
   </div>
 </body>
 
